--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "sass": "^1.55.0",
-    "vite": "3.1.3"
+    "vite": "3.1.3",
+    "vite-plugin-html": "^3.2.0"
   }
 }
